IF(BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(testDebugDrawManager)
  ADD_SUBDIRECTORY(testEntity)
  ADD_SUBDIRECTORY(testWheels)
  ADD_SUBDIRECTORY(testEntitySystemPlugin)

  IF(BUILD_PHYSX)
	ADD_SUBDIRECTORY(testPhysX)
  ENDIF(BUILD_PHYSX)

  if(UNIX)
      install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ProjectAssets/ DESTINATION share/dtEntity/ProjectAssets PATTERN ".svn" EXCLUDE)        
  else()
      install(DIRECTORY ${CMAKE_SOURCE_DIR}/ProjectAssets/ DESTINATION ProjectAssets PATTERN ".svn" EXCLUDE)        
  endif()
ENDIF(BUILD_EXAMPLES)

IF(BUILD_QT)
   IF(BUILD_ENET_INTEGRATION)
	   ADD_SUBDIRECTORY(testNet)	
   ENDIF(BUILD_ENET_INTEGRATION)
ENDIF(BUILD_QT)

