ADD_SUBDIRECTORY(dtEntity)
ADD_SUBDIRECTORY(dtEntitySimulation)

IF(BUILD_LIBROCKET)
	ADD_SUBDIRECTORY(osgLibRocket)
	ADD_SUBDIRECTORY(dtEntityRocket)
ENDIF(BUILD_LIBROCKET)

IF(BUILD_TESTS)
  ADD_SUBDIRECTORY(dtEntityUnitTests)
ENDIF(BUILD_TESTS)

IF(BUILD_JAVASCRIPT_WRAPPERS)
  ADD_SUBDIRECTORY(dtEntityWrappers)
  ADD_SUBDIRECTORY(dtEntityScript)
  ADD_SUBDIRECTORY(dtEntityV8Plugin)
ENDIF(BUILD_JAVASCRIPT_WRAPPERS)

IF(BUILD_PHYSX)
	ADD_SUBDIRECTORY(dtEntityPhysX)		
ENDIF(BUILD_PHYSX)

IF(BUILD_QT)
   IF(BUILD_ENET_INTEGRATION)
	   ADD_SUBDIRECTORY(dtEntityENet)	
   ENDIF(BUILD_ENET_INTEGRATION)
   ADD_SUBDIRECTORY(dtEntityQtWidgets)
   IF(BUILD_JAVASCRIPT_WRAPPERS)
	  ADD_SUBDIRECTORY(dtEntityEditor)	  
   ENDIF(BUILD_JAVASCRIPT_WRAPPERS)
ENDIF(BUILD_QT)